# derelict

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/scene/: basic_scene.json
docs/: libraries.md
examples/: CMakeLists.txt  main.cpp
examples/assets/shaders/defaults/: vertex.vert
include/derelict/application/: application.hpp
include/derelict/graphics/: renderer.hpp  shader.hpp
include/derelict/logging/: logger.hpp
src/application/: application.cpp  application.hpp
src/derelict/application/: application.cpp
src/derelict/graphics/: renderer.cpp  shader.cpp  vertex_array.cpp
src/derelict/logging/: logger.cpp
src/derelict/window/: window.cpp
src/graphics/: renderer.cpp  renderer.hpp  shader.cpp  vertex_array.cpp  vertex_array.hpp
src/logging/: logger.cpp
src/window/: window.cpp  window.hpp
